<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFFFFF" xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <Button
            android:id="@+id/myticket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="projectclick"
            android:text="@string/myticket" />

        <Button
            android:id="@+id/newticket"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="projectclick"
            android:text="@string/newticket" />

        <Button
            android:id="@+id/ticketsforme"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/ticketforme" />

        <Button
            android:id="@+id/reports"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reports" />

        <!-- <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/txtvnulle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/_" />

            <Button
                android:id="@+id/reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reports" />

            <TextView
                android:id="@+id/txtvnulle"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/_" />
        </LinearLayout> -->
    </LinearLayout>

</RelativeLayout>