<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ticket_to_"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvColon1"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etxtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_name" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtvnulla"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSub"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/subject_"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvColon2"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etxtSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/subject" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtvnullb"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvNotes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description_"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvColon3"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etxtNotes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtvnullc"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvProjId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/project_id_"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvColon4"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/etxtProjId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/id_from_prior_screen"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/txtvnulld"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <!--  -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvPriority"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/priority_"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvColon5"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/spnPriority"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.06" />

        <TextView
            android:id="@+id/txtvColon6"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/colon"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvnulle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>
    <!--  -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull7"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvSpace8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <TextView
            android:id="@+id/txtvnull8"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txtvEnter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/_" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="SubmitClick"
            android:text="@string/submit"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:onClick="SubmitClick"
            android:text="@string/cancel"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/txtvnull9"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/_" />
    </LinearLayout>

    <!-- <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" /> -->

</LinearLayout>